--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
 </head>
 <body>
     
-    <div class="container">
+    <div id="container">
+        <div id="greeting">
+            <h1 id="specific-greeting">Good Evening, Christina!</h1>
+        </div>
+        <div id="time">
+
+        </div>
+        <div id="weather">
+
+        </div>
+        <div id="to-dos">
+
+        </div>
+        <div id="weekly-calendar">
+
+        </div>
 
     </div>
 
