--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Homepage</title>
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!--FontAwesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/style.css">
@@ -27,14 +29,77 @@
         <div id="to-dos">
             <h3>To-Do List</h3>
         </div>
-        <div id="weekly-calendar">
-            <h3>Weekly Events</h3>
+        <div id="weekly-events">
+            <h3 class="mb-3">Weekly Events</h3>
+            <span id="save"><i class="fas fa-save"></i></span>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="row">Sunday</div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                    </div>
+                    <div class="col">
+                        <div class="row">Sunday</div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                    </div>
+                    <div class="col">
+                        <div class="row">Monday</div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                    </div>
+                    <div class="col">
+                        <div class="row">Tuesday</div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                    </div>
+                    <div class="col">
+                        <div class="row">Wednesday</div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                    </div>
+                    <div class="col">
+                        <div class="row">Thursday</div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                    </div>
+                    <div class="col">
+                        <div class="row">Friday</div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                        <div class="row"><input type="text"></div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
 
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <!--Moment-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="assets/scripts/script.js"></script>
