Updated weekly events to textareas.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
             <span><i class="fas fa-cog"></i></span>
         </div>
         <div id="greeting">
-            <h1><span id="specific-greeting">Good Evening, </span><span id="name">Christina</span>!</h1>
+            <h1><span id="specific-greeting"></span><span id="name">Christina</span>!</h1>
+            <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon"></i></p>
         </div>
-        <div id="time">
-            <h3>Right now, it is</h3>
+        <div id="time-and-weather">
             <p id="current-time"></p>
-        </div>
-        <div id="weather">
-            <h3>Today's Weather</h3>
+            <p id="weather-today"></p>
         </div>
         <div id="to-dos">
             <h3>To-Do List</h3>
@@ -36,59 +34,31 @@
                 <div class="row">
                     <div class="col">
                         <div class="row">Sunday</div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                    </div>
-                    <div class="col">
-                        <div class="row">Sunday</div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
+                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row">Monday</div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
+                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row">Tuesday</div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
+                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row">Wednesday</div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
+                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row">Thursday</div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
+                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row">Friday</div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
-                        <div class="row"><input type="text"></div>
+                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
+                    </div>
+                    <div class="col">
+                        <div class="row">Saturday</div>
+                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                 </div>
             </div>
