Updated with weather data.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon"></i></p>
         </div>
         <div id="time-and-weather">
-            <p id="current-time"></p>
+            <p class= "mb-2" id="current-time"></p>
             <p id="weather-today"></p>
         </div>
         <div id="to-dos">
@@ -33,31 +33,31 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div class="row">Sunday</div>
+                        <div class="row date"><span class="p-0" id="sunday-date">Sun 12/20</span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row">Monday</div>
+                        <div class="row date"><span class="p-0" id="sunday-date">Mon 12/21</span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row">Tuesday</div>
+                        <div class="row date"><span class="p-0" id="sunday-date">Tue 12/22</span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row">Wednesday</div>
+                        <div class="row date"><span class="p-0" id="sunday-date">Wed 12/23</span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row">Thursday</div>
+                        <div class="row date"><span class="p-0" id="sunday-date">Thu 12/24</span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row">Friday</div>
+                        <div class="row date"><span class="p-0" id="sunday-date">Fri 12/25</span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row">Saturday</div>
+                        <div class="row date"><span class="p-0"id="sunday-date">Sat 12/26</span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                 </div>
