Updated with local storage for name and weather.

--- a/index.html
+++ b/index.html
@@ -12,20 +12,17 @@
 </head>
 <body>
     
-    <div id="container">
+    <div id="container" class="hidden">
         <div id="edit-button">
             <span><i class="fas fa-cog"></i></span>
         </div>
         <div id="greeting">
-            <h1><span id="specific-greeting"></span><span id="name">Christina</span>!</h1>
-            <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon"></i></p>
+            <h1><span id="specific-greeting"></span><span id="name"></span>!</h1>
+            <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon" id="to-dos"></i></p>
         </div>
         <div id="time-and-weather">
             <p class= "mb-2" id="current-time"></p>
             <p id="weather-today"></p>
-        </div>
-        <div id="to-dos">
-            <h3>To-Do List</h3>
         </div>
         <div id="weekly-events">
             <h3 class="mb-3">Weekly Events</h3>
