Updated weekly dates to come from moment.js

--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div class="row date"><span class="p-0" id="sunday-date">Sun 12/20</span></div>
+                        <div class="row date"><span class="p-0" id="sunday-date"></span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row date"><span class="p-0" id="sunday-date">Mon 12/21</span></div>
+                        <div class="row date"><span class="p-0" id="monday-date"></span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row date"><span class="p-0" id="sunday-date">Tue 12/22</span></div>
+                        <div class="row date"><span class="p-0" id="tuesday-date"></span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row date"><span class="p-0" id="sunday-date">Wed 12/23</span></div>
+                        <div class="row date"><span class="p-0" id="wednesday-date"></span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row date"><span class="p-0" id="sunday-date">Thu 12/24</span></div>
+                        <div class="row date"><span class="p-0" id="thursday-date"></span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row date"><span class="p-0" id="sunday-date">Fri 12/25</span></div>
+                        <div class="row date"><span class="p-0" id="friday-date"></span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
-                        <div class="row date"><span class="p-0"id="sunday-date">Sat 12/26</span></div>
+                        <div class="row date"><span class="p-0"id="saturday-date"></span></div>
                         <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
                     </div>
                 </div>
