--- a/index.html
+++ b/index.html
@@ -31,31 +31,31 @@
                 <div class="row">
                     <div class="col">
                         <div class="row date"><span class="p-0" id="sunday-date"></span></div>
-                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="sunday-text" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="monday-date"></span></div>
-                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="monday-text" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="tuesday-date"></span></div>
-                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="tuesday-text" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="wednesday-date"></span></div>
-                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="wednesday-text" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="thursday-date"></span></div>
-                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="thursday-text" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="friday-date"></span></div>
-                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="friday-text" cols="30" rows="10"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0"id="saturday-date"></span></div>
-                        <div class="row"><textarea name="" id="" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="saturday-text" cols="30" rows="10"></textarea></div>
                     </div>
                 </div>
             </div>
