--- a/index.html
+++ b/index.html
@@ -14,12 +14,60 @@
     
     <div id="container" class="hidden">
         <div id="edit-button">
-            <span><i class="fas fa-cog"></i></span>
+            <span><i class="fas fa-cog" data-bs-toggle="modal" data-bs-target="#userInformationModal"></i></span>
         </div>
+        <div class="modal fade" id="userInformationModal" tabindex="-1" aria-labelledby="userInformationModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <p class="modal-title" id="userInformationModalLabel">Update User Information</p>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">Your Name</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1">Your City</span>
+                    <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">Your OpenWeather API Key</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <p>If you do not have an OpenWeather API key, please leave the above section blank.</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
         <div id="greeting">
             <h1><span id="specific-greeting"></span><span id="name"></span>!</h1>
-            <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon" id="to-dos"></i></p>
+            <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon" id="to-dos" data-bs-toggle="modal" data-bs-target="#toDoModal"></i></p>
         </div>
+        <div class="modal fade" id="toDoModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="toDoModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="toDoModalLabel">My To-Do List</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
         <div id="time-and-weather">
             <p class= "mb-2" id="current-time"></p>
             <p id="weather-today"></p>
