Updated from CSS grid to using flexbox for displaying content on page.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
             </div>
           </div>
 
+
+        <div id="time-and-weather" class="my-5">
+            <p class= "mb-2" id="current-time"></p>
+            <p id="weather-today"></p>
+        </div>
+
         <div id="greeting">
             <h1><span id="specific-greeting"></span><span id="name"></span>!</h1>
             <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon" id="to-dos" data-bs-toggle="modal" data-bs-target="#toDoModal"></i></p>
@@ -68,42 +74,38 @@
             </div>
           </div>
 
-        <div id="time-and-weather">
-            <p class= "mb-2" id="current-time"></p>
-            <p id="weather-today"></p>
-        </div>
-        <div id="weekly-events">
+        <div id="weekly-events" class="my-5">
             <h3 class="mb-3">Weekly Events</h3>
             <span id="save"><i class="fas fa-save"></i></span>
             <div class="container">
                 <div class="row">
                     <div class="col">
                         <div class="row date"><span class="p-0" id="sunday-date"></span></div>
-                        <div class="row"><textarea name="" id="sunday-text" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="sunday-text" cols="30" rows="12"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="monday-date"></span></div>
-                        <div class="row"><textarea name="" id="monday-text" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="monday-text" cols="30" rows="12"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="tuesday-date"></span></div>
-                        <div class="row"><textarea name="" id="tuesday-text" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="tuesday-text" cols="30" rows="12"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="wednesday-date"></span></div>
-                        <div class="row"><textarea name="" id="wednesday-text" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="wednesday-text" cols="30" rows="12"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="thursday-date"></span></div>
-                        <div class="row"><textarea name="" id="thursday-text" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="thursday-text" cols="30" rows="12"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0" id="friday-date"></span></div>
-                        <div class="row"><textarea name="" id="friday-text" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="friday-text" cols="30" rows="12"></textarea></div>
                     </div>
                     <div class="col">
                         <div class="row date"><span class="p-0"id="saturday-date"></span></div>
-                        <div class="row"><textarea name="" id="saturday-text" cols="30" rows="10"></textarea></div>
+                        <div class="row"><textarea name="" id="saturday-text" cols="30" rows="12"></textarea></div>
                     </div>
                 </div>
             </div>
