Removing separate to-do section at this time.

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
         <div id="greeting">
             <h1><span id="specific-greeting"></span><span id="name"></span>!</h1>
-            <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon" id="to-dos" data-bs-toggle="modal" data-bs-target="#toDoModal"></i></p>
+            <!-- <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon" id="to-dos" data-bs-toggle="modal" data-bs-target="#toDoModal"></i></p> -->
         </div>
-        <div class="modal fade" id="toDoModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="toDoModalLabel" aria-hidden="true">
+        <!-- <div class="modal fade" id="toDoModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="toDoModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
               <div class="modal-content">
                 <div class="modal-header">
@@ -72,10 +72,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         <div id="weekly-events" class="my-5">
-            <h3 class="mb-3">Weekly Events</h3>
+            <h3 class="mb-3">Weekly Events and To-Do's</h3>
             <span id="save"><i class="fas fa-save"></i></span>
             <div class="container">
                 <div class="row">
