--- a/index.html
+++ b/index.html
@@ -83,28 +83,40 @@
             <div id="greeting">
                 <h1><span id="specific-greeting"></span><span id="name"></span>!</h1>
                 <!-- <p class="mt-3">Check your to-do list! <i class="far fa-clipboard" id="to-do-icon" id="to-dos" data-bs-toggle="modal" data-bs-target="#toDoModal"></i></p> -->
-            </div>
-            <!-- <div class="modal fade" id="toDoModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="toDoModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-scrollable">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="toDoModalLabel">My To-Do List</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                <div class="modal fade" id="toDoModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="toDoModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h5 class="modal-title" id="toDoModalLabel">My To-Do List</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                        <form>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text">Add to list</span>
+                                <input type="text" class="form-control" id="to-do-add-item">
+                                <button class="btn btn-secondary" type="button" id="to-do-add-button">+</button>
+                            </div>
+                        </form>
+                        <div class="container">
+                            <ul id="to-do-list">
+                                <!--To-do's-->
+                            </ul>
+                        </div>
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" id="to-do-save-button">Save changes</button>
+                        </div>
                     </div>
-                    <div class="modal-body">
-                      ...
                     </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                  </div>
                 </div>
-              </div> -->
+            </div>
     
             <div id="weekly-events" class="my-5">
                 <h3 class="mb-3">Weekly Events and To-Do's</h3>
-                <span id="save"><i class="fas fa-save"></i></span>
+                <span id="save-weekly"><i class="fas fa-save"></i></span>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-3 col-md">
