Update for user to clear the API key input if they mistakenly added one in that is not valid.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                             <input type="text" class="form-control" id="users-api">
                         </div>
                         <p>If you do not have an OpenWeather API key, please leave the above section blank.  You can sign up for an OpenWeather API key <a href="https://openweathermap.org/api" target="_blank">here</a>.</p>
+                        <p class="mt-2">If you mistakenly typed in an OpenWeather API Key and would like to clear it, please type in "clear" (without the quotes) for the key to clear it.</p>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
